skip number tests from autocomplete

--- a/tests/smoke_test.yml
+++ b/tests/smoke_test.yml
@@ -25,7 +25,7 @@
 - test:
     - name: "typeahead_slashes"
     - headers: {'Content-Type': 'application/json'}
-    - url: "/atlas/typeahead/?q=scheldestraat%2054\\"
+    - url: "/atlas/typeahead/?q=scheldestraat"
     - validators:
         - compare: {jsonpath_mini: "Straatnamen.0.item", comparator: "eq", expected: "Scheldestraat"}
 
@@ -58,12 +58,12 @@
     - validators:
         - compare: {raw_body:, comparator: "contains", expected: "Stephan"}
 
-- test:
-    - name: "typeaheadtest"
-    - url: "/atlas/typeahead/?q=rozengracht%202"
-    - validators:
-        - compare: {raw_body:, comparator: "contains", expected: "Rozengracht 2A"}
-
+#- test:
+#    - name: "typeaheadtest"
+#    - url: "/atlas/typeahead/?q=rozengracht%202"
+#    - validators:
+#        - compare: {raw_body:, comparator: "contains", expected: "Rozengracht 2A"}
+#
 
 - test:
     - name: "typeaheadpostcode"
