--- a/tests/aanduidingen_test.yml
+++ b/tests/aanduidingen_test.yml
@@ -21,7 +21,7 @@
 
 - test:
     - name: "zoekadres_pcode"
-    - url: "/atlas/search/postcode/?q=1018"
+    - url: "/atlas/search/postcode/?q=1018WR"
     - validators:
         - compare: {jsonpath_mini: "count", comparator: "ge", expected: 3}
         - extract_test: {jsonpath_mini: "results", test: "exists"}
