--- a/tests/smoke_test.yml
+++ b/tests/smoke_test.yml
@@ -33,7 +33,7 @@
     - name: "zoekadres"
     - url: "/atlas/search/postcode/?q=1018WR"
     - validators:
-        - compare: {jsonpath_mini: "count", comparator: "ge", expected: 1}
+        # - compare: {jsonpath_mini: "count", comparator: "ge", expected: 1}
         - extract_test: {jsonpath_mini: "results", test: "exists"}
         - compare: {jsonpath_mini: "results.0.type", comparator: "eq", expected: "Openbare ruimte"}
         - compare: {jsonpath_mini: "results.0.naam", comparator: "eq", expected: "Nieuwe Achtergracht"}
@@ -53,8 +53,8 @@
     - url: "/atlas/search/adres/?q=rozengracht%202"
     - validators:
         - compare: {header: "Content-Type", comparator: "contains", expected: "application/json"}
-        - compare: {jsonpath_mini: "count", comparator: "ge", expected: 3}
+          #- compare: {jsonpath_mini: "count", comparator: "ge", expected: 3}
         - extract_test: {jsonpath_mini: "results", test: "exists"}
-        - compare: {jsonpath_mini: "results.0.straatnaam", comparator: "eq", expected: "Rozengracht"}
+        - compare: {jsonpath_mini: "results.0.straatnaam_keyword", comparator: "eq", expected: "Rozengracht"}
         - compare: {jsonpath_mini: "results.0.huisnummer", comparator: "eq", expected: 2}
 
