--- a/src/pyresttest/smoke_test.yml
+++ b/src/pyresttest/smoke_test.yml
@@ -49,6 +49,6 @@
         - compare: {header: "Content-Type", comparator: "contains", expected: "application/json"}
           #- compare: {jsonpath_mini: "count", comparator: "ge", expected: 3}
         - extract_test: {jsonpath_mini: "results", test: "exists"}
-        - compare: {jsonpath_mini: "results.0.straatnaam_keyword", comparator: "eq", expected: "Rozengracht"}
+        - compare: {jsonpath_mini: "results.0.straatnaam", comparator: "eq", expected: "Rozengracht"}
         - compare: {jsonpath_mini: "results.0.huisnummer", comparator: "eq", expected: 2}
 
