--- a/src/pyresttest/hr_test.yml
+++ b/src/pyresttest/hr_test.yml
@@ -70,7 +70,7 @@
         - compare: {jsonpath_mini: "results.0._display", comparator: "eq", expected: "Yottabyte Solutions B.V. - Van Spilbergenstraat 95 1"}
         - compare: {jsonpath_mini: "results.0.handelsnamen.0.naam", comparator: "eq", expected: "Yottabyte Solutions B.V."}
         - compare: {jsonpath_mini: "results.0.vestigingsnummer", comparator: "eq", expected: "000030256488"}
-        - compare: {jsonpath_mini: "results.0.naam", comparator: "eq", expected: Yottabyte Solutions B.V."}
+        - compare: {jsonpath_mini: "results.0.naam", comparator: "eq", expected: "Yottabyte Solutions B.V."}
         - compare: {jsonpath_mini: "results.0.hoofdvestiging", comparator: "eq", expected: true}
 
         - compare: {jsonpath_mini: "results.0.postadres", comparator: "eq", expected: "Van Spilbergenstraat 95 1 1057RB Amsterdam"}
