--- a/src/pyresttest/hr_test.yml
+++ b/src/pyresttest/hr_test.yml
@@ -67,10 +67,10 @@
         - compare: {jsonpath_mini: "results.0._links.self.href", comparator: "regex", expected: ".*/handelsregister/vestiging/000030256488/"}
         - compare: {jsonpath_mini: "results.0.type", comparator: "eq", expected: "vestiging"}
         - compare: {jsonpath_mini: "results.0.dataset", comparator: "eq", expected: "handelsregister"}
-        - compare: {jsonpath_mini: "results.0._display", comparator: "eq", expected: "Yottabyte Solutions B.V. - Van Spilbergenstraat 95 1"}
-        - compare: {jsonpath_mini: "results.0.handelsnamen.0.naam", comparator: "eq", expected: "Yottabyte Solutions B.V."}
+        - compare: {jsonpath_mini: "results.0._display", comparator: "eq", expected: "Yottabyte Solutions - Van Spilbergenstraat 95 1"}
+        - compare: {jsonpath_mini: "results.0.handelsnamen.0.naam", comparator: "eq", expected: "Yottabyte Solutions"}
         - compare: {jsonpath_mini: "results.0.vestigingsnummer", comparator: "eq", expected: "000030256488"}
-        - compare: {jsonpath_mini: "results.0.naam", comparator: "eq", expected: "Yottabyte Solutions B.V."}
+        - compare: {jsonpath_mini: "results.0.naam", comparator: "eq", expected: "Yottabyte Solutions"}
         - compare: {jsonpath_mini: "results.0.hoofdvestiging", comparator: "eq", expected: true}
 
         - compare: {jsonpath_mini: "results.0.postadres", comparator: "eq", expected: "Van Spilbergenstraat 95 1 1057RB Amsterdam"}
