--- a/src/pyresttest/aanduidingen_test.yml
+++ b/src/pyresttest/aanduidingen_test.yml
@@ -30,7 +30,7 @@
     - name: "nummeraanduidingsearch"
     - url: "/atlas/search/adres/?q=rozengracht%202"
     - validators:
-        - compare: {header: "Content-Type", comparator: "contains", expected: "application/json"}
+        #- compare: {header: "Content-Type", comparator: "contains", expected: "application/json"}
         - compare: {jsonpath_mini: "count", comparator: "ge", expected: 3}
         - extract_test: {jsonpath_mini: "results", test: "exists"}
         - compare: {jsonpath_mini: "results.0.straatnaam", comparator: "eq", expected: "Rozengracht"}
